--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -5,10 +5,8 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') DC Scanner
+      a.navbar-brand(href='/') Cabarrus/Mecklenburg Scanner
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        li
-          a(href='/about') About
         li
           a(href='/stats') Statistics
